--- a/src/pages/main/main.css
+++ b/src/pages/main/main.css
@@ -46,7 +46,7 @@ main {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 
   /* outline: 1px solid yellow; */
 }
@@ -87,10 +87,4 @@ main {
 .menu__item:hover, .menu__item_active {
   background-color: rgba(255,255,255, 0.4);
   border-radius: 10%;
-}
-.marketData {
-  border-bottom: 1px solid white;
-}
-.coinsDashboard {
-  height: 100%;
 }
