--- a/src/components/coinstats/coinstats.css
+++ b/src/components/coinstats/coinstats.css
@@ -15,7 +15,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* border: 1px solid blue */
+  /* border: 1px solid white; */
+  margin: 15px;
 }
 .coinstats__charts-timeperiod {
 
@@ -30,6 +31,7 @@
 }
 .coinstats__charts-chart {
   flex-grow: 1;
+  width: 100%;
 }
 .coinstats__statsfield {
   flex: 2;
